# test

./: .clang-format  .gitignore  CMakeLists.txt
res/: test.ui
src/: main.cpp
